test/files/neg/macro-argc-mismatch.check
Test_2.scala:4: error: missing arguments for macro method one in object Macros
  one
  ^
Test_2.scala:5: error: not enough arguments for macro method one: (x: Int)Unit.
Unspecified value parameter x.
  one()
     ^
Test_2.scala:6: error: too many arguments for macro method one: (x: Int)Unit
  one(2, 3)
     ^
Test_2.scala:7: error: not enough arguments for macro method one: (x: Int)Unit.
Unspecified value parameter x.
  one()()
     ^
Test_2.scala:8: error: Unit does not take parameters
  one(1)()
        ^
Test_2.scala:10: error: missing arguments for macro method two in object Macros
  two
  ^
Test_2.scala:11: error: not enough arguments for macro method two: (x: Int)(y: Int)Unit.
Unspecified value parameter x.
  two()
     ^
Test_2.scala:12: error: too many arguments for macro method two: (x: Int)(y: Int)Unit
  two(2, 3)
     ^
Test_2.scala:13: error: not enough arguments for macro method two: (x: Int)(y: Int)Unit.
Unspecified value parameter x.
  two()()
     ^
Test_2.scala:14: error: missing arguments for macro method two in object Macros
  two(1)
     ^
Test_2.scala:15: error: not enough arguments for macro method two: (y: Int)Unit.
Unspecified value parameter y.
  two(1)()
        ^
Test_2.scala:16: error: too many arguments for macro method two: (y: Int)Unit
  two(1)(2, 3)
        ^
Test_2.scala:17: error: not enough arguments for macro method two: (y: Int)Unit.
Unspecified value parameter y.
  two(1)()()
        ^
Test_2.scala:18: error: Unit does not take parameters
  two(1)(1)()
           ^
14 errors found
